--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "ajv": "^7.2.4",
-    "gh-pages": "^6.2.0"
+    "gh-pages": "^6.2.0",
+    "tailwindcss": "^3.4.16"
   }
 }
